// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select demo -- disabled 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #bbb;
}

.c0 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c4 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
      disabled=""
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c4"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- group 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="c0"
  >
    <div>
      <div
        class="c1 c2"
      >
        <div>
          2
        </div>
        <i
          class="icon__down c3 "
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- multiple 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="c0"
  >
    <div>
      <div
        class="c1 c2"
      >
        <div>
          已选择 2 项
        </div>
        <i
          class="icon__down c3 "
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- popover 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- renderContent 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            <span
              style="color:red;"
            >
              1
            </span>
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- renderSelector 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background-color: #FFF;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  color: #4074e1;
  border-color: #4683e6;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <button
          class="c1"
          type="button"
        >
          <i
            class="icon__check "
          />
          一
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- search 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- select 1`] = `
.c12 {
  position: relative;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.c12 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  background: #FFF;
  font-size: inherit;
  outline: none;
  color: inherit;
  height: 28px;
}

.c12 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c12 input::-moz-placeholder {
  color: #abb4c3;
}

.c12 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c12 input::placeholder {
  color: #abb4c3;
}

.c12 input:hover {
  border-color: #4683e6;
}

.c12 input:focus {
  border-color: #4683e6;
}

.c25 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c25:hover {
  border: 1px solid #4683e6;
}

.c26 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c24 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c23 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  margin-right: 8px;
}

.c8 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c13 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c13:hover {
  border-color: #4683e6;
}

.c13 .c19 {
  width: 20px;
  height: 20px;
}

.c13 .c21 {
  left: 13px;
  height: 10px;
}

.c13 .c15,
.c13 .c17 {
  line-height: 16px;
}

.c13 .c15 {
  padding-right: 20px;
}

.c13 .c17 {
  padding-left: 20px;
}

.c13 .c15 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        placeholder
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <span
          class="c12"
        >
          <input
            value="placeholder"
          />
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        multiple
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c13"
          value="false"
        >
          <div
            class="c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        showSelectAll
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c13"
        >
          <div
            class="c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c13"
          value="false"
        >
          <div
            class="c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        search
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c13"
          value="false"
        >
          <div
            class="c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c23"
      placeholder="placeholder"
    >
      <div>
        <div
          class="c24 c25"
        >
          <div>
            placeholder
          </div>
          <i
            class="icon__down c26 "
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- showSelectAll 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            请选择
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- size 1`] = `
.c4 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c4:hover {
  border: 1px solid #4683e6;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 22px;
  line-height: 22px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c5 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 34px;
  line-height: 34px;
}

.c5:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c4"
        >
          <div>
            1
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c5"
        >
          <div>
            1
          </div>
          <i
            class="icon__down c3 "
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- uncontrolled 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="c0"
  >
    <div>
      <div
        class="c1 c2"
      >
        <div>
          1
        </div>
        <i
          class="icon__down c3 "
        />
      </div>
    </div>
  </div>
</div>
`;
